style: small ui fixes (#520)
* style: fix cutoff of icon in room member count
[branch ch12461]

* style: make Contacts search bar consistent with other search
[branch ch12847]

--- a/src/ui/chat/_all.scss
+++ b/src/ui/chat/_all.scss
@@ -171,10 +171,9 @@
       @extend %flex-row;
       @extend %flex-align-center;
       height: 20px;
-      margin-left: -12px;
 
       .material-icons {
-        padding: $padding-small;
+        padding-right: $padding-small;
       }
     }
   }
